--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "devDependencies": {
     "@types/": "u-wave/react-vimeo",
-    "@types/node": "20.4.2",
+    "@types/node": "^20.4.2",
     "@types/react": "18.2.15",
     "@typescript-eslint/eslint-plugin": "^5.50.0",
     "eslint": "^8.0.1",
