--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "axios": "^1.4.0",
     "next": "13.4.10",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-vimeo": "^2.0.0"
   },
   "devDependencies": {
     "@types/": "u-wave/react-vimeo",
