--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@u-wave/react-vimeo": "^0.9.10",
     "axios": "^1.4.0",
     "next": "13.4.10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-player": "^2.12.0",
     "react-vimeo": "^2.0.0"
   },
   "devDependencies": {
