--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@u-wave/react-vimeo": "^0.9.10",
     "axios": "^1.4.0",
     "next": "13.4.10",
     "react": "18.2.0",
